Refactoring swagger autogen
