# src/shared/infra/http/routes/cars.routes.ts
@@ -16,9 +16,7 @@ const createCarSpecificationController = new CreateCarSpecificationController();
 const uploadCarImageController = new UploadCarImagesController();
 
 
-
 const upload = multer(uploadConfig.upload("./tmp/cars"));
-
 
 carsRoutes.post(
     "/",
@@ -26,7 +24,56 @@ carsRoutes.post(
     ensureAdmin,
     createCarController.handle
 
-    /* #swagger.tags = ['Car'] */
+    /* #swagger.tags = ['Car'] 
+    #swagger.summary = 'Create Car' 
+    #swagger.description = 'Create a Car' 
+    #swagger.requestBody = {   
+        content: {
+            'application/json': {
+                schema: {
+                    type: 'object',
+                    properties: {
+                        name: {
+                            type: 'string'
+                        },
+                        description: {
+                            type: 'string'
+                        },
+                        daily_rate: {
+                            type: 'number'
+                        },
+                        licence_plate: {
+                            type: 'string'
+                        },
+                        fine_amount: {
+                            type: 'number'
+                        },
+                        brand: {
+                            type: 'string'
+                        },
+                        category_id: {
+                            type: 'string'
+                        }
+                    }
+                    
+                }
+            }
+        } 
+    }
+
+    #swagger.security = [{
+        "bearerAuth": []
+    }]
+        
+    #swagger.responses[200] = {
+        description: "Success"
+    }
+
+    
+    #swagger.responses[400] = {
+        description: "Error!"
+    }
+    */  
 
 );
 
@@ -45,7 +92,41 @@ carsRoutes.post(
     ensureAdmin,
     createCarSpecificationController.handle
 
-    /* #swagger.tags = ['Car'] */
+    /* #swagger.tags = ['Car'] 
+    #swagger.summary = 'Create Car' 
+    #swagger.description = 'Create a Car' 
+    #swagger.requestBody = {   
+        content: {
+            'application/json': {
+                schema: {
+                    type: 'object',
+                    properties: {
+                        specifications_id: {
+                            type: 'array'
+                        },
+                    }
+                    
+                }
+            }
+        } 
+    }
+
+    #swagger.security = [{
+        "bearerAuth": []
+    }]
+
+    #swagger.parameters['id'] = {
+            in: 'path',
+            type: 'integer',
+            description: 'Specification Id.' }
+        
+    #swagger.responses[200] = {
+        description: "Success"
+    }
+    #swagger.responses[400] = {
+        description: "Error!"
+    }
+    */  
 );
 
 
@@ -56,7 +137,32 @@ carsRoutes.post(
     upload.array("images"),
     uploadCarImageController.handle
 
-    /* #swagger.tags = ['Car'] */
+    /* #swagger.tags = ['Car'] 
+    #swagger.summary = 'Create Car' 
+    #swagger.consumes = ['multipart/form-data']  
+          #swagger.parameters['singleFile'] = {
+              in: 'formData',
+              type: 'file',
+              required: 'true',
+              description: 'Some description...',
+        } 
+
+    #swagger.security = [{
+        "bearerAuth": []
+    }]
+
+    #swagger.parameters['id'] = {
+            in: 'path',
+            type: 'string',
+            description: 'Car Id.',
+            required = 'true'
+        }
+        
+    #swagger.responses[201] = {
+        description: "Created"
+    }
+    */  
+    
 )
 
 
